# Animated-Actors

./: ProjectTwoMovie.anim
CanadianExperienceLib/: CMakeLists.txt  Drawable.h  FrameDlg.cpp  FrameDlg.h  HaroldFactory.h  MachineDrawable.cpp  MachineDrawable.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  SpartyFactory.cpp  ViewEdit.cpp  ViewEdit.h
MachineLib/: ActualMachine.cpp  ActualMachine.h  Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Gear.cpp  Gear.h  INegotiator.cpp  INegotiator.h  Lever.cpp  Lever.h  MachineFactory.cpp  MachineFactory.h  MachineOneFactory.cpp  MachineOneFactory.h  MachineTwoFactory.cpp  MachineTwoFactory.h  Motor.cpp  Motor.h  NewMachine.cpp  NewMachine.h  Piston.cpp  Piston.h  PointSink.cpp  PointSink.h  PointSource.cpp  PointSource.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RodSource.cpp  RodSource.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  (+1 more)
MachineTests/: MachineTest.cpp
resources/xrc/: main.fbp  main.xrc
